@@ -1,0 +1,22 @@
+attribute	application	test80-recurs.p
+attribute	basetime	0
+attribute	clock_id	0
+attribute	nv_size	0
+attribute	perl_version	0
+attribute	ticks_per_sec	0
+attribute	xs_version	0
+fid_block_time	1	2	[ 0 6 ]
+fid_block_time	1	7	[ 0 1 ]
+fid_fileinfo	1	[ test80-recurs.p   1 2 0 0 ]
+fid_line_time	1	2	[ 0 2 ]
+fid_line_time	1	3	[ 0 2 ]
+fid_line_time	1	4	[ 0 2 ]
+fid_line_time	1	7	[ 0 1 ]
+fid_sub_time	1	2	[ 0 6 ]
+fid_sub_time	1	7	[ 0 1 ]
+profile_modes	fid_block_time	block
+profile_modes	fid_line_time	line
+profile_modes	fid_sub_time	sub
+sub_caller	main::recurs	1	4	[ 1 0 0 0 0 ]
+sub_caller	main::recurs	1	7	[ 1 0 0 0 0 ]
+sub_subinfo	main::recurs	[ 1 1 5 2 0 0 ]
